# python-library-template

./: README.md
mylib/: pyproject.toml
mylib/src/mylib/: version.py
mylib/tests/: test_version.py
